table overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,3 @@
-// .App {
-// }
+.App {
+  max-width: 100vw;
+}
