--- a/src/components/spells/SpellsPreviewTable.scss
+++ b/src/components/spells/SpellsPreviewTable.scss
@@ -3,6 +3,7 @@
   thead {
     th {
       cursor: pointer;
+      white-space: nowrap;
       svg {
         margin-left: 5px;
         margin-bottom: 2px;
